--- a/public/register.ejs
+++ b/public/register.ejs
@@ -12,7 +12,7 @@
 
 <body>
 
-
+<p id="wechat_openid" hidden="hidden"><%= openid%></div>
 <div class="weui-cells__title">您的信息</div>
 <div class="weui-cells weui-cells_form">
 <!--
