Impelement ejs file and allow openid passing to queue. Various fix on page.

--- a/public/register.ejs
+++ b/public/register.ejs
@@ -12,7 +12,7 @@
 
 <body>
 
-<p id="wechat_openid" hidden="hidden"><%= openid%></div>
+<p id="wechat_openid" hidden="hidden"><%= openid%></p>
 <div class="weui-cells__title">您的信息</div>
 <div class="weui-cells weui-cells_form">
 <!--
@@ -43,8 +43,8 @@
         </div>
         <div class="weui-cell__bd">
             <select class="weui-select" name="sex" id="sex">
-                <option value="male">男</option>
-                <option value="female">女</option>
+                <option value="男">男</option>
+                <option value="女">女</option>
             </select>
         </div>
     </div>
