Add 'add customer' button on monitor.html page

--- a/public/stylesheets/weui.css
+++ b/public/stylesheets/weui.css
@@ -46,71 +46,71 @@ a {
 .weui-icon-circle:before {
   content: "\EA01";
 }
-/* '' */
+/* '' */
 .weui-icon-download:before {
   content: "\EA02";
 }
-/* '' */
+/* '' */
 .weui-icon-info:before {
   content: "\EA03";
 }
-/* '' */
+/* '' */
 .weui-icon-safe-success:before {
   content: "\EA04";
 }
-/* '' */
+/* '' */
 .weui-icon-safe-warn:before {
   content: "\EA05";
 }
-/* '' */
+/* '' */
 .weui-icon-success:before {
   content: "\EA06";
 }
-/* '' */
+/* '' */
 .weui-icon-success-circle:before {
   content: "\EA07";
 }
-/* '' */
+/* '' */
 .weui-icon-success-no-circle:before {
   content: "\EA08";
 }
-/* '' */
+/* '' */
 .weui-icon-waiting:before {
   content: "\EA09";
 }
-/* '' */
+/* '' */
 .weui-icon-waiting-circle:before {
   content: "\EA0A";
 }
-/* '' */
+/* '' */
 .weui-icon-warn:before {
   content: "\EA0B";
 }
-/* '' */
+/* '' */
 .weui-icon-info-circle:before {
   content: "\EA0C";
 }
-/* '' */
+/* '' */
 .weui-icon-cancel:before {
   content: "\EA0D";
 }
-/* '' */
+/* '' */
 .weui-icon-search:before {
   content: "\EA0E";
 }
-/* '' */
+/* '' */
 .weui-icon-clear:before {
   content: "\EA0F";
 }
-/* '' */
+/* '' */
 .weui-icon-back:before {
   content: "\EA10";
 }
-/* '' */
+/* '' */
 .weui-icon-delete:before {
   content: "\EA11";
 }
-/* '' */
+/* '' */
 [class^="weui-icon_"]:before,
 [class*=" weui-icon_"]:before {
   margin: 0;
@@ -346,6 +346,10 @@ input.weui-btn_plain-default {
   margin-left: 15px;
 }
 .weui-btn-area {
+  margin: 1.17647059em 15px 0.3em;
+}
+.weui-btn-area-right {
+  text-align: right;
   margin: 1.17647059em 15px 0.3em;
 }
 .weui-btn-area_inline {
