--- a/public/register.ejs
+++ b/public/register.ejs
@@ -13,6 +13,7 @@
 <body>
 
 <p id="wechat_openid" hidden="hidden"><%= openid%></p>
+<p id="redirect_url" hidden="hidden"><%= redirection%></p>
 <div class="weui-cells__title">您的信息</div>
 <div class="weui-cells weui-cells_form">
 <!--
