--- a/public/register.ejs
+++ b/public/register.ejs
@@ -14,6 +14,19 @@
 
 <p id="wechat_openid" hidden="hidden"><%= openid%></p>
 <p id="redirect_url" hidden="hidden"><%= redirection%></p>
+
+<div class="weui-cells__title">排队信息</div>
+<div class="weui-cells weui-cells_form">
+    <div class="weui-cell">
+	  <div class="weui-cell__hd"><label class="weui-label">等待时间</label></div>
+      <div class="weui-cell__bd"><label class="weui-label"><%= totalInfo.totalETime + '分钟'%></label></div>
+  	</div>
+    <div class="weui-cell">
+	  <div class="weui-cell__hd"><label class="weui-label">队伍长度</label></div>
+      <div class="weui-cell__bd"><label class="weui-label"><%= totalInfo.totalCustomer + '人'%></label></div>
+  	</div>
+</div>
+
 <div class="weui-cells__title">您的信息</div>
 <div class="weui-cells weui-cells_form">
 <!--
@@ -28,13 +41,13 @@
     <div class="weui-cell">
 	  <div class="weui-cell__hd"><label class="weui-label">姓名</label></div>
         <div class="weui-cell__bd">
-            <input class="weui-input" type="text" placeholder="请输入姓名" id="name"/>
+            <input class="weui-input" type="text" placeholder="请输入姓名" id="name" value="<%= customer.name%>"/>
         </div>
   	</div>
     <div class="weui-cell">
 		<div class="weui-cell__hd"><label class="weui-label">手机号</label></div>
         <div class="weui-cell__bd">
-            <input class="weui-input" type="tel" placeholder="请输入手机号" id="telnumber"/>
+            <input class="weui-input" type="tel" placeholder="请输入手机号" id="telnumber" value="<%= customer.tel%>"/>
         </div>
     </div>
 
@@ -214,7 +227,11 @@
 -->
 
 <div class="weui-btn-area">
-    <a class="weui-btn weui-btn_primary" href="javascript:;" id="submit">排队理发</a>
+    <% if (totalInfo.inqueue) {%>
+        <a class="weui-btn weui-btn_primary" href="javascript:;" id="submit">修改信息</a>
+    <%}else{%>
+        <a class="weui-btn weui-btn_primary" href="javascript:;" id="submit">排队理发</a>
+    <%}%>
 </div>
 </body>
 </html>
