--- a/public/register.ejs
+++ b/public/register.ejs
@@ -57,8 +57,13 @@
         </div>
         <div class="weui-cell__bd">
             <select class="weui-select" name="sex" id="sex">
-                <option value="男">男</option>
+                <% if (customer.sex == '男') {%>
+                    <option selected="selected" value="男">男</option>
                 <option value="女">女</option>
+                <% } else {%>
+                    <option value="男">男</option>
+                    <option selected="selected" value="女">女</option>
+                <% }%>
             </select>
         </div>
     </div>
@@ -210,7 +215,7 @@
 <div class="weui-cells weui-cells_form">
     <div class="weui-cell">
         <div class="weui-cell__bd">
-            <textarea class="weui-textarea" placeholder="请把您的特殊需求写在这里" rows="5" id="remakrs"></textarea>
+            <textarea class="weui-textarea" placeholder="请把您的特殊需求写在这里" rows="5" id="remarks"><%= totalInfo.remark%></textarea>
             <div class="weui-textarea-counter"><span>0</span>/200</div>
         </div>
     </div>
