--- a/public/register.ejs
+++ b/public/register.ejs
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <title>晓晨理发💈</title>
 <link href="stylesheets/weui.css" rel="stylesheet" type="text/css" media="screen">
-<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+<!-- <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> -->
+<script type="text/javascript" src="javascripts/jquery-3.2.1.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="javascripts/register_ui.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
